reduce font to prevent spill over

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -381,7 +381,7 @@ li > a {
   }
 
   .caption > p {
-    font-size: 16px;
+    font-size: 14px;
     padding: 0;
     border: 0;
     vertical-align: baseline;
